# metaheuristicas

./: README.md  mhP3.cabal  stack.yaml
FUENTES/: Base.hs  DE.hs  Genetic.hs  ILS.hs  KNN.hs  Main.hs  Memetic.hs  P1.hs  Read.hs  SA.hs  Utils.hs
memorias/: Makefile  P1.md  P2.md  P3.md
memorias/assets/: descripcion.md  header.sty  plantilla.tex
